# zoa

./: .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  convert_for_to_f90.py  copyExecToAppBundle.sh  genTestCases.sh  macos_install.script.sh  meson.build  mod_plotopticalsystem.mod  zoa-version.sh
GLASS/: CHANCE.FOR  CORNIN.FOR  HIKARI.FOR  HIKARI0.FOR  HIKARI1.FOR  HIKARI1.TXT  HOYA.FOR  MOHARA  MOHARA.FOR  MOHARA2.FOR  MOHARA2JN.FOR  MOHARAJN.FOR  OHARA  RADHARD.FOR  SCHOTT  SCHOTT.FOR  SCHOTT.f90  SCHOTTJN.FOR  SCHOTTTST  WRITEKDPGLASSLIB.FOR  fixcon
LIBLEN/: LENS 2.KDP
MacOS/: AppIcon.icns  Info.plist  app.entitlements  macos_install_script.sh
MacOS/ZoaPkg/: ZoaInstall.txt  ZoaPkg.pkgproj
PERMAC/: .MAC.DAT.icloud  .MAC001.DAT.icloud  .MAC002.DAT.icloud  .MAC003.DAT.icloud  .MAC004.DAT.icloud  .MAC005.DAT.icloud  .MAC006.DAT.icloud
WINTERACTER/: APODGUI.FOR  BMP.FOR  DOTFGUI.FOR  GLASSFRESH.FOR  GOTFGUI.FOR  GUICODE.FOR  HARDWAR2.FOR  IMAGE1.FOR  LOADGRIDA.FOR  OPTIMIZE.FOR  P1_1.FOR  PIKFRESH.FOR  POL.FOR  POL1.FOR  POWELLOLD.FOR  PSFGUI.FOR  SPOTGUI.FOR  SPSRFFRESH.FOR  THICKNESS_FRESH.FOR  VARIABLES.FOR  VARIFRESH.FOR
Windows/: WindowsInstallerInno.iss
data/: genLetterP.py  gresource.xml  zoa.css
etc/: collections.f90  hl-zoa-tree-tmp.f90  meson.build  stringmod.f90  zoa-logger.f90
help/: README.md  genHelpFiles.sh  gen_docs.py
help/html/: command_table.html  constraints_table.html  index.html  index.html-e
help/md/: command_table.md  index.md
jupyter/: setup.py  zoa_demo.ipynb
jupyter/zoa_kernel/: __init__.py  __main__.py  kernel.json  kernel.py
matlab/: README.md  ZoaClient.m  test_rsi_doublegauss.m  zoaDecode.m
scripts/: addnewPlot.py  ui-template.f90
slsqp/: meson.build  slsqp_core.f90
src/: AIMDIFRYS.FOR  AIMDIFRYS.f90  ARRAYGRT.INC  ARRAYGRTFRESH.INC  ASPH.INC  ASTRO1.FOR  ASTRO1.f90  BICUBIC.FOR  BICUBIC.f90  BMPJN.FOR  BMPJN.f90  CATNAMER.INC  CHANGE_FIELDS_HANDLER.INC  CMDCHECKING.FOR  CMDCHECKING.f90  CMDER.FOR  CMDER.f90  CMDER.f90.bak  CONFIG1.FOR  CONFIG1.f90  CONFIG2.FOR  CONFIG2.f90  CONFIG3.FOR  CONFIG3.f90  CONFIG4.FOR  CONFIG4.f90  CV2PRG.FOR  CV2PRG.f90  DATCFG.INC  DATHGR.INC  DATLEN.INC  DATMAC.INC  DATMAI.INC  DATNSS.INC  DATPTS.INC  DATSP1.INC  DATSPD.INC  DATSUB.INC  DEBUGPROMPT.FOR  DIFRAYS.FOR  (+403 more)
test/: DoubleGaussTest.ref  DoubleGaussTest.zoa  KNOWN_ISSUES.md  apertures_bes.ref  apertures_bes.zoa  asph_modifiers.ref  asph_modifiers.zoa  basic_paraxial.ref  basic_paraxial.zoa  bentley_twice.ref  bentley_twice.zoa  coverage_report.py  debug_rmd.ref  debug_rmd.zoa  export_roundtrip.ref  export_roundtrip.zoa  fieldflattener.ref  fieldflattener.zoa  files_misc.ref  files_misc.zoa  gui_guards.ref  gui_guards.zoa  lens_edit.ref  lens_edit.zoa  litho_restart.ref  litho_restart.zoa  macro_ex1.ref  macro_ex1.zoa  mirror_example.ref  mirror_example.zoa  misc_commands.ref  misc_commands.zoa  newlensTest.ref  newlensTest.zoa  optim_extra.ref  optim_extra.zoa  pickups.ref  pickups.zoa  plot_modifiers.ref  plot_modifiers.zoa  (+35 more)
