# This file is part of zoa.
#
# Copyright (C) 2023 Jeremy Nesbitt
#
# xtb is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# xtb is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with xtb.  If not, see <https://www.gnu.org/licenses/>.

# GLOB  = src/zoa-ui.f90 src/command-utils.f90 src/plotsettingtypes.f90
# src/kdp-data-types.f90 src/global_widgets.f90 src/gtk-hl-zoa.f90
# src/zoa-plot.f90 src/zoa-macro-ui.f90 src/zoa-glass-ui.f90 src/ui-lens-library.f90
# src/zoamenubar.f90 src/zoa-tab.f90 src/kdp-draw.f90 src/mod_plotrayfan.f90
# src/mod_plotopticalsystem.f90  src/ui-ast-fc-dist.f90 src/ui-spot.f90
# src/ui-rmsfield.f90 src/ROUTEDRAWING.f90 src/zoa-tab-manager.f90
# src/zzhandlers.f90 src/ui-sys-config.f90 src/glass-manager.f90
# src/lens-editor.f90 src/parax_calcs.f90 src/kdp-interfaces.f90
# src/WDRAWOPTICALSYSTEM.f90

src_c += files('zoa_utils.c')


srcs += files(
  'globals.FOR',
  'nssmod.FOR',
  'type-utils.f90',
  'algos.f90',
  'zoa-ui.f90',
  'kdp-utils.f90',
  'plot-functions.f90',
  'command-utils.f90',
  'plotsettingtypes.f90',
  'mod_DATLEN.f90',
  'mod_DATMAC.f90',
  'mod_DATMAI.f90',
  'lens-data-manager.f90',
  'paraxial-ray-trace.f90',
  'real-ray-trace.f90',
  'plot-setting-manager.f90',
  'kdp-data-types.f90',
  'global_widgets.f90',
  'gtk-hl-zoa.f90',
  'zoa-plot.f90',
  'zoa-macro-ui.f90',
  'zoa-glass-ui.f90',
  'ui-lens-library.f90',
  'zoamenubar.f90',
  'zoa-tab.f90',
  'kdp-draw.f90',
  #'mod_plotrayfan.f90',
  #'mod_plotopticalsystem.f90',
  #'mod-lens-draw-tab.f90',
  #'ui-ast-fc-dist.f90',
  #'ui-spot.f90',
  'ROUTEDRAWING.f90',
  'zoa-tab-manager.f90',
  'zoa-plot-manip-toolbar.f90',
  'zzhandlers.f90',
  'ui-sys-config.f90',
  'glass-manager.f90',
  'lens-editor.f90',
  'parax_calcs.f90',
  'kdp-interfaces.f90',
  'codeV-commands.f90',
  'WDRAWOPTICALSYSTEM.f90',
  'zoa-file-handler.f90',
  'kdp-interfaces.f90',
  'kdp-seidel.f90',
  'VIENEW.f90',
  'TestCommands.f90',
  'RCImageBasic.f90',
  'RCImagePrimitive.f90',
  'RCImageIO.f90',
  'referencespherecalcs.f90',
  'ui-utilities.f90',
  'AIMDIFRYS.FOR',
  'ASTRO1.FOR',
  'BICUBIC.FOR',
  'BMPJN.FOR',
  'CMDCHECKING.FOR',
  'CMDER.FOR',
  'CONFIG1.FOR',
  'CONFIG2.FOR',
  'CONFIG3.FOR',
  'CONFIG4.FOR',
  'CV2PRG.FOR',
  'DIFRAYS.FOR',
  'DXF.FOR',
  'FGLASSLOAD.FOR',
  'FOBBS.FOR',
  'FOE.FOR',
  'GCATLOAD.FOR',
  'GCATLOAD2.FOR',
  'HARDWAR1.FOR',
  'HARDWAR2JN.FOR',
  'IMAGE1JN.FOR',
  'INITKDP.FOR',
  'INSIDER.FOR',
  'KDP.FOR',
  'LDM1.FOR',
  'LDM2.FOR',
  'LDM3.FOR',
  'LDM4.FOR',
  'LDM5.FOR',
  'LDM6.FOR',
  'LDM7.FOR',
  'ldm8.FOR',
  'LDM9.FOR',
  'LDM10.FOR',
  'LDM11.FOR',
  'LDM12.FOR',
  'LDM13.FOR',
  'LDM14.FOR',
  'LDM15.FOR',
  'LDM16.FOR',
  'LDM17.FOR',
  'LDM18.FOR',
  'LIBLOAD.FOR',
  'MACRO1.FOR',
  'MACRO2.FOR',
  'MACRO3.FOR',
  'MACRO4.FOR',
  'MATH.FOR',
  'megaDebugLogger.FOR',
  'MODEL.FOR',
  'MYGLASS.FOR',
  'NAMES.FOR',
  'newplotcommands.FOR',
  'NSSDXF.FOR',
  'NSSFILE1.FOR',
  'NSSFILE2.FOR',
  'NSSFILE3.FOR',
  'NSSFILE4.FOR',
  'NSSFILE5.FOR',
  'OPTENG1.FOR',
  'OPTIM1.FOR',
  'OPTIM2.FOR',
  'OPTIM3.FOR',
  'OPTIM4.FOR',
  'OPTIM5.FOR',
  'OPTIM6.FOR',
  'OPTIM7.FOR',
  'OPTIM8.FOR',
  'OPTIM9.FOR',
  'OPTIM10.FOR',
  'OPTIM11.FOR',
  'PARAX1.FOR',
  'PARAX2.FOR',
  'PARAX3.FOR',
  'PARAX4.FOR',
  'PIKUPS1.FOR',
  'PIKUPS2.FOR',
  'PLOTCAD1.FOR',
  'PLOTCAD2.FOR',
  'PLOTCAD3.FOR',
  'PLOTCAD4.FOR',
  'PLOTCAD5.FOR',
  'PLOTCAD6.FOR',
  'PLOTCAD7.FOR',
  'PLOTCAD8.FOR',
  'PLOTCAD9.FOR',
  'PLOTCAD10.FOR',
  'PLOTCAD11.FOR',
  'PROFIT_GLOBAL.FOR',
  'RAYTRA1.FOR',
  'RAYTRA2.FOR',
  'RAYTRA3.FOR',
  'RAYTRA4.FOR',
  'RAYTRA5.FOR',
  'raytra6.FOR',
  'raytra7.FOR',
  'raytra8.FOR',
  'raytra9.FOR',
  'raytra10.FOR',
  'raytra11.FOR',
  'RAYTRA12.FOR',
  'RAYTRA13.FOR',
  'SAVEREST.FOR',
  'SORT.FOR',
  'SPECSUR1.FOR',
  'SPECSUR2.FOR',
  'SPECSUR3.FOR',
  'SPECT1.FOR',
  'SVD.FOR',
  'TILTER.FOR',
  'TSTKDP.FOR',
  'USER1.FOR',
  'UTILITY1.FOR',
  'UTILITY2.FOR',
  'UTILITY3.FOR',
  'UTILITY4.FOR',
  'UTILITY5.FOR',
  'UTILITY6.FOR',
  'UTILITY7.FOR',
  'WAVSPOT1.FOR',
  'WAVSPOT2.FOR',
  'WAVSPOT3.FOR',
  'WAVSPOT4.FOR',
  'WAVSPOT5.FOR',
  'WAVSPOT6.FOR',
  'WAVSPOT7.FOR',
  'WAVSPOT8.FOR',
  'ZMX2PRG.FOR'
  )

prog += files('zoamain.F90')
