# This file is part of zoa.
#
# Copyright (C) 2023 Jeremy Nesbitt
#
# xtb is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# xtb is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with xtb.  If not, see <https://www.gnu.org/licenses/>.

# GLOB  = src/zoa-ui.f90 src/command-utils.f90 src/plotsettingtypes.f90
# src/kdp-data-types.f90 src/global_widgets.f90 src/gtk-hl-zoa.f90
# src/zoa-plot.f90 src/zoa-macro-ui.f90 src/zoa-glass-ui.f90 src/ui-lens-library.f90
# src/zoamenubar.f90 src/zoa-tab.f90 src/kdp-draw.f90 src/mod_plotrayfan.f90
# src/mod_plotopticalsystem.f90  src/ui-ast-fc-dist.f90 src/ui-spot.f90
# src/ui-rmsfield.f90 src/ROUTEDRAWING.f90 src/zoa-tab-manager.f90
# src/zzhandlers.f90 src/ui-sys-config.f90 src/glass-manager.f90
# src/lens-editor.f90 src/parax_calcs.f90 src/kdp-interfaces.f90

src_c += files('zoa_utils.c', 'ui-list-models.c', 'ui-operand-models.c', 'ui-constraint-models.c')


srcs += files(
  'surface-params.f90',
  'zoa-output.f90',
  'zoa-ui-callbacks.f90',
  'globals.f90',
  'result-builder.f90',
  'data-registers.f90',
  'mod-fft.f90',
  'nssmod.f90',
  'type-utils.f90',
  'algos.f90',
  'zoa-ui.f90',
  'kdp-utils.f90',
  'plot-command-utils.f90',
  'plot-functions.f90',
  'plot-functions-fft.f90',
  'optim-functions.f90',
  'command-utils.f90',
  'plotsettingtypes.f90',
  'psf.f90',
  'mod_DATLEN.f90',
  'mod_DATMAI.f90',
  'mod_DATSPD.f90',
  'mod_DATSUB.f90',
  'mod_DATCFG.f90',
  'mod_DATSP1.f90',
  'mod_DATHGR.f90',
  'mod_DATPTS.f90',
  'mod_surface.f90',
  'clear-apertures.f90',
  'surface-type.f90',
  'mod_system.f90',
  'lens-data-manager.f90',
  'analysis-manager.f90',
  'paraxial-ray-trace.f90',
  'real-ray-trace.f90',
  'ray-failure.f90',
  'plot-setting-manager.f90',
  'kdp-data-types.f90',
  'global_widgets.f90',
  'gtk-hl-zoa.f90',
  'zoa-plot.f90',
  'zoa-macro-ui.f90',
  'zoa-glass-ui.f90',
  'ui-lens-library.f90',
  'zoamenubar.f90',
  'zoa-status-bar.f90',
  'zoa-tab.f90',
  'kdp-draw.f90',
  #'mod_plotrayfan.f90',
  #'mod_plotopticalsystem.f90',
  #'mod-lens-draw-tab.f90',
  #'ui-ast-fc-dist.f90',
  #'ui-spot.f90',
  'optim-types.f90',
  'optim-types-callbacks.f90',
  'optim-debug.f90',
  'ui-table-funcs.f90',  
  'optimizer-ui.f90',
  'tow-functions.f90',
  'ROUTEDRAWING.f90',
  'zoa-tab-manager.f90',
  'zoa-plot-manip-toolbar.f90',
  'zzhandlers.f90',
  'ui-sys-config.f90',
  'glass-manager.f90',
  'lens-editor.f90',
  'parax_calcs.f90',
  'kdp-interfaces.f90',
  'codeV-legacy-wrappers.f90',
  #'codeV-interfaces.f90',
  'codeV-commands.f90',
  'codeV-sur.f90',
  'codeV-plot.f90',
  'codeV-commands-plots.f90',
  'codeV-commands-lensops.f90',
  'codeV-commands-editops.f90',
  'codeV-commands-utils.f90',
  'zoa-file-handler.F90',
  'kdp-interfaces.f90',
  'kdp-seidel.f90',
  'VIENEW.f90',
  'TestCommands.f90',
  'RCImageBasic.f90',
  'RCImagePrimitive.f90',
  'RCImageIO.f90',
  'referencespherecalcs.f90',
  'ui-utilities.f90',
  'ui-dialogs.f90',
  'ui-preferences.f90',
  'AIMDIFRYS.f90',
  'ASTRO1.f90',
  'BICUBIC.f90',
  'BMPJN.f90',
  'CMDCHECKING.f90',
  'CMDER.f90',
  'CONFIG1.f90',
  'CONFIG2.f90',
  'CONFIG3.f90',
  'CONFIG4.f90',
  'CV2PRG.f90',
  'DIFRAYS.f90',
  'DXF.f90',
  'FGLASSLOAD.f90',
  'FOBBS.f90',
  'FOE.f90',
  'GCATLOAD.f90',
  'GCATLOAD2.f90',
  'HARDWAR1.f90',
  'HARDWAR2JN.f90',
  #'IMAGE1JN.FOR',
  'INITKDP.f90',
  'INSIDER.f90',
  'KDP.f90',
  'LDM1.f90',
  'LDM2.f90',
  'LDM3.f90',
  'LDM4.f90',
  'LDM5.f90',
  'LDM6.f90',
  'LDM7.f90',
  'ldm8.f90',
  'LDM9.f90',
  'LDM10.f90',
  'LDM11.f90',
  'LDM12.f90',
  'LDM13.f90',
  'LDM14.f90',
  'LDM15.f90',
  'LDM16.f90',
  'LDM17.f90',
  'LDM18.f90',
  'LIBLOAD.f90',
  'macro-stubs.f90',
  'MATH.f90',
  'megaDebugLogger.f90',
  'MODEL.f90',
  'MYGLASS.f90',
  'NAMES.f90',
  'newplotcommands.f90',
  'NSSDXF.f90',
  'NSSFILE1.f90',
  'NSSFILE2.f90',
  'NSSFILE3.f90',
  'NSSFILE4.f90',
  'NSSFILE5.f90',
  'OPTENG1.f90',
  'OPTIM1.f90',
  'OPTIM2.f90',
  'OPTIM3.f90',
  'OPTIM4.f90',
  'OPTIM5.f90',
  'OPTIM6.f90',
  'OPTIM7.f90',
  'OPTIM8.f90',
  'OPTIM9.f90',
  'OPTIM10.f90',
  'OPTIM11.f90',
  'PARAX1.f90',
  'PARAX2.f90',
  'PARAX3.f90',
  'PARAX4.f90',
  'PIKUPS1.f90',
  'PIKUPS2.f90',
  'PLOTCAD1.f90',
  'PLOTCAD2.f90',
  'PLOTCAD3.f90',
  'PLOTCAD4.f90',
  'PLOTCAD6.f90',
  'PLOTCAD7.f90',
  'PLOTCAD8.f90',
  'PLOTCAD8_fan.f90',
  'PLOTCAD8_fando0.f90',
  'PLOTCAD9.f90',
  'PLOTCAD10.f90',
  'PLOTCAD11.f90',
  'PROFIT_GLOBAL.f90',
  'RAYTRA1.f90',
  'RAYTRA2.f90',
  'RAYTRA3.f90',
  'RAYTRA4.f90',
  'RAYTRA5.f90',
  'raytra6.f90',
  'raytra7.f90',
  'raytra8.f90',
  'raytra9.f90',
  'raytra10.f90',
  'raytra11.f90',
  'RAYTRA12.f90',
  'RAYTRA13.f90',
  'SAVEREST.f90',
  'SORT.f90',
  'SPECSUR1.f90',
  'SPECSUR2.f90',
  'SPECSUR3.f90',
  'SPECT1.f90',
  'SVD.f90',
  'TILTER.f90',
  'TSTKDP.f90',
  'USER1.f90',
  'UTILITY1.f90',
  'UTILITY2.f90',
  'UTILITY3.f90',
  'UTILITY4.f90',
  'UTILITY5.f90',
  'UTILITY6.f90',
  'UTILITY7.f90',
  'WAVSPOT1.f90',
  'WAVSPOT2.f90',
  'WAVSPOT3.f90',
  'WAVSPOT4.f90',
  'WAVSPOT5.f90',
  'WAVSPOT6.f90',
  'WAVSPOT7.f90',
  'WAVSPOT8.f90',
  'ZMX2PRG.f90',
  'zoa-headless-init.f90',
  'zoa-test-capture.f90',
  'zoa-plot-output.f90',
  'zoa-headless-plot.f90'
)

plotcad5_src += files('PLOTCAD5.f90')

test_prog = files('zoa-test-runner.f90')
server_prog = files('zoa-server.f90')
server_srcs = files('zmq-binding.f90')

prog += files('zoamain.F90')
